infrastructure/ingress/traefik/exposure/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: controller-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ingress.internal.${domain_prefix}${project}.${domain}
    external-dns.alpha.kubernetes.io/target: internal.${domain_prefix}${project}.${domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - internal
  routes:
    - match: Host(`ingress.internal.${domain_prefix}${project}.${domain}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      # middlewares:
      #   - name: tailnet-only
      #     namespace: controller-ingress
  tls:
    secretName: wildcard.${domain_prefix}${project}.${domain}.tls
